Rozwiązanie problemu z local

--- a/LanguageSchool/Web.config
+++ b/LanguageSchool/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-LanguageSchool-20181105094129.mdf;Initial Catalog=aspnet-LanguageSchool-20181105094129;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="LanguageSchoolEntities" connectionString="metadata=res://*/Models.LanguageSchool.csdl|res://*/Models.LanguageSchool.ssdl|res://*/Models.LanguageSchool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=201402020H\MSSQLEXPRESS;initial catalog=LanguageSchool;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LanguageSchoolEntities" connectionString="metadata=res://*/Models.LanguageSchool.csdl|res://*/Models.LanguageSchool.ssdl|res://*/Models.LanguageSchool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=LanguageSchool;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
