Dodanie i wykorzystanie VM dla kursu

--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -270,6 +270,7 @@
     <Compile Include="Models\UsersTests.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\CourseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
