--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -361,6 +361,7 @@
     <Content Include="Views\Course\Details.cshtml" />
     <Content Include="Views\ContactRequest\Create.cshtml" />
     <Content Include="Views\EntryTest\Index.cshtml" />
+    <Content Include="Views\Shared\_BackToCourses.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
