--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -283,11 +283,17 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\home_marketable.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="images\Background.jpg" />
+    <Content Include="images\Background_courses.jpg" />
+    <Content Include="images\Background_home.jpg" />
+    <Content Include="images\Background_course_details.jpg" />
+    <Content Include="images\Background_test.jpg" />
+    <Content Include="images\Backgroud_contact.jpg" />
+    <Content Include="images\Background_test_faded.jpg" />
     <Content Include="images\Logo.png" />
     <Content Include="Models\LanguageSchool.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
