--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -357,7 +357,11 @@
     <Content Include="Views\Shared\_BackToCourses.cshtml" />
     <Content Include="Views\EntryTest\TakeTest.cshtml" />
     <Content Include="Views\Shared\_MenuItems.cshtml" />
-    <Content Include="Views\User\Login.cshtml" />
+    <Content Include="Views\User\Create.cshtml" />
+    <Content Include="Views\User\Delete.cshtml" />
+    <Content Include="Views\User\Details.cshtml" />
+    <Content Include="Views\User\Edit.cshtml" />
+    <Content Include="Views\User\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
