Dodanie potencjalnych logo dla userów zalogowanych i nie

--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -306,6 +306,8 @@
     <Content Include="images\Background_contact.jpg" />
     <Content Include="images\Background_test_faded.jpg" />
     <Content Include="images\Logo.png" />
+    <Content Include="images\Logo_logged.png" />
+    <Content Include="images\Logo_notlogged.png" />
     <Content Include="Models\LanguageSchool.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>LanguageSchool.edmx</DependentUpon>
