Dodanie poziomu testu do modelu oraz na listę

--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -234,6 +234,9 @@
     <Compile Include="Models\EntryTest.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\LanguageProficency.cs">
+      <DependentUpon>LanguageSchool.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\LanguageSchool.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
