--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -303,6 +303,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\LanguageSchool_Primary.mdf" />
+    <Content Include="App_Data\LanguageSchool_Primary_log.ldf">
+      <DependentUpon>LanguageSchool_Primary.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\home_marketable.css" />
