--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -393,6 +393,7 @@
     <Content Include="Views\Message\Details.cshtml" />
     <Content Include="Views\Message\Edit.cshtml" />
     <Content Include="Views\Message\Index.cshtml" />
+    <Content Include="Views\Shared\_MenuLogo.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
