--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -313,6 +313,8 @@
     <Compile Include="Models\UsersTests.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\ContactInfoListParameters.cs" />
+    <Compile Include="Models\ViewModels\ListParameters.cs" />
     <Compile Include="Models\ViewModels\AlertViewModel.cs" />
     <Compile Include="Models\ViewModels\AnswerViewModel.cs" />
     <Compile Include="Models\ViewModels\ContactRequestViewModel.cs" />
@@ -425,6 +427,7 @@
     <Content Include="Views\UserData\Details.cshtml" />
     <Content Include="Views\UserData\Edit.cshtml" />
     <Content Include="Views\UserData\Index.cshtml" />
+    <Content Include="Views\UserData\List.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
