Drobne zmiany w stylowaniu,dodanie formatki pod conreq details

--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -428,6 +428,7 @@
     <Content Include="Views\UserData\Edit.cshtml" />
     <Content Include="Views\UserData\Index.cshtml" />
     <Content Include="Views\UserData\List.cshtml" />
+    <Content Include="Views\ContactRequest\Details.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
