--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -315,6 +315,7 @@
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModels\ContactInfoListParameters.cs" />
+    <Compile Include="Models\ViewModels\MaterialViewModel.cs" />
     <Compile Include="Models\ViewModels\ListParameters.cs" />
     <Compile Include="Models\ViewModels\AlertViewModel.cs" />
     <Compile Include="Models\ViewModels\AnswerViewModel.cs" />
