--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -318,6 +318,7 @@
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModels\ContactInfoListParameters.cs" />
+    <Compile Include="Models\ViewModels\GroupTimeViewModel.cs" />
     <Compile Include="Models\ViewModels\GroupViewModel.cs" />
     <Compile Include="Models\ViewModels\MaterialViewModel.cs" />
     <Compile Include="Models\ViewModels\ListParameters.cs" />
