Dodanie zapisu użytkowników do grupy

--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -319,6 +319,7 @@
     </Compile>
     <Compile Include="Models\ViewModels\ContactInfoListParameters.cs" />
     <Compile Include="Models\ViewModels\GroupTimeViewModel.cs" />
+    <Compile Include="Models\ViewModels\UsersGroupViewModel.cs" />
     <Compile Include="Models\ViewModels\GroupViewModel.cs" />
     <Compile Include="Models\ViewModels\MaterialViewModel.cs" />
     <Compile Include="Models\ViewModels\ListParameters.cs" />
@@ -451,6 +452,7 @@
     <Content Include="Views\Group\Index.cshtml" />
     <Content Include="Views\Course\FullDetails.cshtml" />
     <Content Include="Views\Group\PickHours.cshtml" />
+    <Content Include="Views\Group\AddUsers.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
