--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -205,6 +205,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\GroupController.cs" />
+    <Compile Include="Controllers\LessonSubjectController.cs" />
     <Compile Include="DAL\PopulateList.cs" />
     <Compile Include="Encryption.cs" />
     <Compile Include="Consts.cs" />
@@ -455,6 +456,11 @@
     <Content Include="Views\Group\AddUsers.cshtml" />
     <Content Include="Views\UserData\AddGroups.cshtml" />
     <Content Include="Views\User\TimeTable.cshtml" />
+    <Content Include="Views\LessonSubject\Create.cshtml" />
+    <Content Include="Views\LessonSubject\Delete.cshtml" />
+    <Content Include="Views\LessonSubject\Details.cshtml" />
+    <Content Include="Views\LessonSubject\Edit.cshtml" />
+    <Content Include="Views\LessonSubject\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
