--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -319,6 +319,7 @@
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModels\ContactInfoListParameters.cs" />
+    <Compile Include="Models\ViewModels\LessonSubjectViewModel.cs" />
     <Compile Include="Models\ViewModels\GroupTimeViewModel.cs" />
     <Compile Include="Models\ViewModels\UsersGroupViewModel.cs" />
     <Compile Include="Models\ViewModels\GroupViewModel.cs" />
@@ -444,8 +445,6 @@
     <Content Include="Views\Material\Details.cshtml" />
     <Content Include="Views\Material\Edit.cshtml" />
     <Content Include="Views\Material\Index.cshtml" />
-    <Content Include="Views\Course\TempTeacher.cshtml" />
-    <Content Include="Views\Course\TempStudent.cshtml" />
     <Content Include="Views\Group\Create.cshtml" />
     <Content Include="Views\Group\Delete.cshtml" />
     <Content Include="Views\Group\FullDetails.cshtml" />
