--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -206,6 +206,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\GroupController.cs" />
     <Compile Include="Controllers\LessonSubjectController.cs" />
+    <Compile Include="Controllers\QuestionController.cs" />
     <Compile Include="DAL\PopulateList.cs" />
     <Compile Include="Encryption.cs" />
     <Compile Include="Consts.cs" />
@@ -318,6 +319,7 @@
     <Compile Include="Models\UsersTests.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\SubjectsQuestionsViewModel.cs" />
     <Compile Include="Models\ViewModels\ContactInfoListParameters.cs" />
     <Compile Include="Models\ViewModels\LessonSubjectViewModel.cs" />
     <Compile Include="Models\ViewModels\GroupTimeViewModel.cs" />
@@ -461,6 +463,11 @@
     <Content Include="Views\LessonSubject\Edit.cshtml" />
     <Content Include="Views\LessonSubject\LessonSubjects.cshtml" />
     <Content Include="Views\Group\Details.cshtml" />
+    <Content Include="Views\Question\Create.cshtml" />
+    <Content Include="Views\Question\Delete.cshtml" />
+    <Content Include="Views\Question\Details.cshtml" />
+    <Content Include="Views\Question\Edit.cshtml" />
+    <Content Include="Views\Question\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
