--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -319,6 +319,7 @@
     <Compile Include="Models\UsersTests.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\OpenQuestionViewModel.cs" />
     <Compile Include="Models\ViewModels\TimeTableViewModel.cs" />
     <Compile Include="Models\ViewModels\SubjectsQuestionsViewModel.cs" />
     <Compile Include="Models\ViewModels\ContactInfoListParameters.cs" />
@@ -464,11 +465,22 @@
     <Content Include="Views\LessonSubject\Edit.cshtml" />
     <Content Include="Views\LessonSubject\LessonSubjects.cshtml" />
     <Content Include="Views\Group\Details.cshtml" />
-    <Content Include="Views\Question\Create.cshtml" />
+    <Content Include="Views\Question\CreateOpen.cshtml" />
     <Content Include="Views\Question\Delete.cshtml" />
     <Content Include="Views\Question\Details.cshtml" />
     <Content Include="Views\Question\Edit.cshtml" />
     <Content Include="Views\Question\Index.cshtml" />
+    <Content Include="Views\ClosedQuestion\Delete.cshtml" />
+    <Content Include="Views\ClosedQuestion\Details.cshtml" />
+    <Content Include="Views\ClosedQuestion\Edit.cshtml" />
+    <Content Include="Views\ClosedQuestion\Index.cshtml" />
+    <Content Include="Views\OpenQuestion\Create.cshtml" />
+    <Content Include="Views\OpenQuestion\Delete.cshtml" />
+    <Content Include="Views\OpenQuestion\Details.cshtml" />
+    <Content Include="Views\OpenQuestion\Edit.cshtml" />
+    <Content Include="Views\OpenQuestion\Index.cshtml" />
+    <Content Include="Views\Question\CreateClosed.cshtml" />
+    <Content Include="Views\Question\Create.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
