--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -204,6 +204,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\GroupController.cs" />
     <Compile Include="Controllers\LessonSubjectController.cs" />
     <Compile Include="Controllers\QuestionController.cs" />
@@ -482,6 +483,7 @@
     <Content Include="Views\Question\CreateClosed.cshtml" />
     <Content Include="Views\Question\Create.cshtml" />
     <Content Include="Views\Question\AddAnswers.cshtml" />
+    <Content Include="Views\Test\Create.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
